--- a/css/style.css
+++ b/css/style.css
@@ -2764,6 +2764,28 @@ h6 {
       background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
       background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%); }
 
+
+.footer_text .footer_social {
+  margin-top: 45px; }
+  .footer_text .footer_social li {
+    display: inline-block;
+    margin-right: 7px; }
+    .footer_text .footer_social li:last-child {
+      margin-right: 0px; }
+    .footer_text .footer_social li a {
+      line-height: 40px;
+      width: 40px;
+      background: #fff;
+      border-radius: 5px;
+      display: inline-block;
+      text-align: center;
+      color: #000;
+      font-size: 16px; }
+    .footer_text .footer_social li:hover a {
+      background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+      background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+      background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%); }
+
 /* End Personal Profile Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
